adding a notebook with documentation

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "#### 3)  Tracing back the best alignment\n",
     "\n",
-    "The results are traced backward (starting from the end of the matrix) - thanks to filling the matrix 'pointers_to_trace_optimal_alignment' in the previous step, the algorithm knows the operation that led to the alignment, and this is information about which field to move to. The result of this process is a two sequences of characters, representing the best alignment with each other.\n"
+    "The results are traced backward (starting from the end of the matrix) - thanks to filling the matrix 'pointers_to_trace_optimal_alignment' in the previous step, the algorithm knows the operation that led to the alignment, and this is information about which field to move to. The result of this process is a two sequences of characters, representing the best alignment with each other."
    ]
   },
   {
