TASK-3 reformatting notebook

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2cf3d913",
+   "id": "5ea0fb9a",
    "metadata": {},
    "source": [
     "# Needleman Wunsch algorithm"
@@ -29,10 +29,10 @@
     "import sys\n",
     "import os.path as osp\n",
     "\n",
-    "SRC_SUBDIR = '../src/'\n",
+    "SRC_SUBDIR = \"../src/\"\n",
     "SRC_SUBDIR = osp.abspath(SRC_SUBDIR)\n",
     "if SRC_SUBDIR not in sys.path:\n",
-    "    print(f'Adding source directory to the sys.path: {SRC_SUBDIR!r}')\n",
+    "    print(f\"Adding source directory to the sys.path: {SRC_SUBDIR!r}\")\n",
     "    sys.path.insert(1, SRC_SUBDIR)"
    ]
   },
@@ -44,12 +44,16 @@
    "outputs": [],
    "source": [
     "from features.needleman_wunsch import needleman_wunsch as nw\n",
-    "from features.needleman_wunsch import initialise_grid, fill_scores, trace_through_alignment"
+    "from features.needleman_wunsch import (\n",
+    "    initialise_grid,\n",
+    "    fill_scores,\n",
+    "    trace_through_alignment,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "92b3d1f4",
+   "id": "1a3458cf",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d35f3b",
+   "id": "c937be31",
    "metadata": {},
    "source": [
     "## How to use?"
@@ -67,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f22b1f1b",
+   "id": "910a1a7b",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb33eeae",
+   "id": "bbb7a408",
    "metadata": {},
    "source": [
     "## How it works?"
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f77f5f9",
+   "id": "6b87e78f",
    "metadata": {},
    "source": [
     "1) Creating initial matrix"
@@ -104,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f5f8f44d",
+   "id": "9bb36af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef0c8fb",
+   "id": "345cdc14",
    "metadata": {},
    "source": [
     "2) Fill the scores"
@@ -122,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad3f3236",
+   "id": "a5873d9a",
    "metadata": {},
    "outputs": [
     {
@@ -211,15 +215,13 @@
    ],
    "source": [
     "pointers_to_trace_optimal_alignment = fill_scores(\n",
-    "    scores_grid, \n",
-    "    sequence_one, \n",
-    "    sequence_two, \n",
-    "    verbose=True)"
+    "    scores_grid, sequence_one, sequence_two, verbose=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55596762",
+   "id": "fa676d27",
    "metadata": {},
    "source": [
     "3) Tracing back the best alignment"
@@ -228,18 +230,18 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34e5c1ab",
+   "id": "b0cc09c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "inverted_x_result, inverted_y_result = trace_through_alignment(pointers_to_trace_optimal_alignment,\n",
-    "                                                               sequence_one,\n",
-    "                                                               sequence_two)"
+    "inverted_x_result, inverted_y_result = trace_through_alignment(\n",
+    "    pointers_to_trace_optimal_alignment, sequence_one, sequence_two\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49e6a8d7",
+   "id": "429bd68a",
    "metadata": {},
    "source": [
     "4) Result"
@@ -248,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51361bda",
+   "id": "a85be037",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8510283",
+   "id": "2cf573dc",
    "metadata": {},
    "outputs": [],
    "source": []
