TASK-3 reformatting notebook

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -21,10 +21,10 @@
     "import sys\n",
     "import os.path as osp\n",
     "\n",
-    "SRC_SUBDIR = '../src/'\n",
+    "SRC_SUBDIR = \"../src/\"\n",
     "SRC_SUBDIR = osp.abspath(SRC_SUBDIR)\n",
     "if SRC_SUBDIR not in sys.path:\n",
-    "    print(f'Adding source directory to the sys.path: {SRC_SUBDIR!r}')\n",
+    "    print(f\"Adding source directory to the sys.path: {SRC_SUBDIR!r}\")\n",
     "    sys.path.insert(1, SRC_SUBDIR)"
    ]
   },
@@ -36,7 +36,11 @@
    "outputs": [],
    "source": [
     "from features.needleman_wunsch import needleman_wunsch as nw\n",
-    "from features.needleman_wunsch import initialise_grid, fill_scores, trace_through_alignment"
+    "from features.needleman_wunsch import (\n",
+    "    initialise_grid,\n",
+    "    fill_scores,\n",
+    "    trace_through_alignment,\n",
+    ")"
    ]
   },
   {
@@ -252,10 +256,8 @@
    ],
    "source": [
     "pointers_to_trace_optimal_alignment = fill_scores(\n",
-    "    scores_grid,\n",
-    "    sequence_one,\n",
-    "    sequence_two,\n",
-    "    verbose=True)"
+    "    scores_grid, sequence_one, sequence_two, verbose=True\n",
+    ")"
    ]
   },
   {
@@ -275,9 +277,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inverted_x_result, inverted_y_result = trace_through_alignment(pointers_to_trace_optimal_alignment,  \n",
-    "                                                               sequence_one,\n",
-    "                                                               sequence_two)\n"
+    "inverted_x_result, inverted_y_result = trace_through_alignment(\n",
+    "    pointers_to_trace_optimal_alignment, sequence_one, sequence_two\n",
+    ")"
    ]
   },
   {
