TASK-3 fixing formatting

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -135,7 +135,8 @@
    ],
    "source": [
     "scores_grid = initialise_grid(sequence_one, sequence_two)\n",
-    "print(scores_grid)"
+    "print(scores_grid)\n",
+    "# fmt: off"
    ]
   },
   {
@@ -143,12 +144,13 @@
    "id": "4526c455",
    "metadata": {},
    "source": [
+    "\n",
     "Calculating values in the result matrix:\n",
     "\n",
     "If sequence one is represented as X and sequence two as Y, then the matrix is filled based on the formula:\n",
     "\n",
     "$ \\text{scores}[i][j] = \\max \\{ \\\\\n",
-    "    \\text{scores}[i-1][j-1] + \\text{match/mismatch} \\quad \\text{jeśli } X[i] = Y[j], \\\\\n",
+    "    \\text{scores}[i-1][j-1] + \\text{match/mismatch} \\quad \\text{if } X[i] = Y[j], \\\\\n",
     "    \\text{scores}[i-1][j] - \\text{gap} \\quad \\text{for gap in sequence } X, \\\\\n",
     "    \\text{scores}[i][j-1] - \\text{gap} \\quad \\text{for gap in sequence } Y \\\\\n",
     "\\} $\n"
@@ -329,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
