TASK-3 fixing formatting

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "3ec8e84e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding source directory to the sys.path: '/Users/joannaczabajska/PycharmProjects/sequence-tools/src'\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "305f7391",
    "metadata": {},
    "outputs": [],
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "2e1d6b86",
    "metadata": {},
    "outputs": [
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "ba11813c",
    "metadata": {},
    "outputs": [
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "9381f024",
    "metadata": {},
    "outputs": [
@@ -257,6 +265,7 @@
     }
    ],
    "source": [
+    "# fmt: on\n",
     "pointers_to_trace_optimal_alignment = fill_scores(\n",
     "    scores_grid, sequence_one, sequence_two, verbose=True\n",
     ")"
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "1ebd67b8",
    "metadata": {},
    "outputs": [],
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "1047b605",
    "metadata": {},
    "outputs": [
