TASK-3 fixing formatting (multiline equation)

--- a/notebooks/NeedmanWunschDemo.ipynb
+++ b/notebooks/NeedmanWunschDemo.ipynb
@@ -149,19 +149,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4526c455",
+   "id": "aae36d6e",
    "metadata": {},
    "source": [
-    "\n",
     "Calculating values in the result matrix:\n",
     "\n",
     "If sequence one is represented as X and sequence two as Y, then the matrix is filled based on the formula:\n",
     "\n",
-    "$ \\text{scores}[i][j] = \\max \\{ \\\\\n",
-    "    \\text{scores}[i-1][j-1] + \\text{match/mismatch} \\quad \\text{if } X[i] = Y[j], \\\\\n",
-    "    \\text{scores}[i-1][j] - \\text{gap} \\quad \\text{for gap in sequence } X, \\\\\n",
-    "    \\text{scores}[i][j-1] - \\text{gap} \\quad \\text{for gap in sequence } Y \\\\\n",
-    "\\} $\n"
+    "$$\n",
+    "\\begin{align*}\n",
+    "&\\text{scores}[i][j] = \\max \\{ \\\\\n",
+    "    &\\text{scores}[i-1][j-1] + \\text{match/mismatch} \\quad \\text{if } X[i] = Y[j], \\\\\n",
+    "    &\\text{scores}[i-1][j] - \\text{gap} \\quad \\text{for gap in sequence } X, \\\\\n",
+    "    &\\text{scores}[i][j-1] - \\text{gap} \\quad \\text{for gap in sequence } Y \\\\\n",
+    "\\}\n",
+    "\\end{align*}\n",
+    "$$"
    ]
   },
   {
